# python-subjectclient

./: .coveragerc  .gitignore  .gitreview  .mailmap  .testr.conf  CONTRIBUTING.rst  HACKING.rst  LICENSE  README.md  README.rst  setup.cfg  tox.ini
doc/: Makefile
doc/source/: api.rst  conf.py  index.rst  shell.rst
doc/source/man/: nova.rst
subjectclient/: __init__.py  api_versions.py  auth_plugin.py  base.py  client.py  exceptions.py  extension.py  i18n.py  service_catalog.py  shell.py  utils.py
subjectclient/v1/: __init__.py  client.py  servers.py  shell.py  subjects.py  versions.py
tools/: subject.bash_completion  subject.zsh_completion
