[metadata]
name = python-subjectclient
version = 1.0.0
summary = Client library for OpenStack Compute API
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-subjectclient
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    subjectclient

[entry_points]
console_scripts =
    subject = subjectclient.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
domain = subjectclient
directory = subjectclient/locale

[update_catalog]
domain = subjectclient
output_dir = subjectclient/locale
input_file = subjectclient/locale/subjectclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = subjectclient/locale/subjectclient.pot

[wheel]
universal = 1

[pbr]
warnerrors = true
